--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,7 +26,7 @@ jobs:
         uses: wearerequired/lint-action@v1
         with:
           eslint: true
-          prettier: false
+          prettier: true
           auto_fix: true
           git_name: "ESLint"
           commit_message: "使用 ${linter} 改進代碼質量"
